# WFiIS-MN-2019

./: README.md
lab01/: CMakeLists.txt  main.cpp
lab02/: CMakeLists.txt  main.cpp
lab02/wykresy/: analitic  wykres
lab03/: CMakeLists.txt  gaussj.cpp  main.cpp
lab03/wykresy/: e_norm
lab04/: main.cpp
lab04/wykresy/: alfa0  alfa100  data2.txt  data3.txt  wykres1
lab05/: CMakeLists.txt  main.cpp
lab05/wyniki/: d_matrix.txt  lambdas.txt
lab06/: main.cpp
lab06/wyniki/: f_newton.txt  f_sieczne.txt  g_sieczne.txt
lab07/: main.cpp
lab07/wyniki/: czebyszew10  czebyszew15  czebyszew20  czebyszew5  zwykly10  zwykly15  zwykly20  zwykly5
lab08/: main.cpp
lab08/wyniki/: wyniki.txt
lab09/: main.cpp
lab09/wyniki/: f1_F  f1_noise_F_30_30  f1_noise_F_5_5  f2_F  f3_F_10_10  f3_F_5_0  f_1_noise_rozne_bazy  f_3_rozne_bazy
lab10/: main.cpp
lab10/wyniki/: f_jedna_trzecia.txt  f_zloty_podzial.txt  fun_f_wykres_rozne_lambdy  fun_g_wykres_rozne_lambdy  g_jedna_trzecia.txt  g_zloty_podzial.txt
lab11/: main.cpp
lab11/wyniki/: niezaburzony_splot_k_10  niezaburzony_splot_k_12  niezaburzony_splot_k_8  zaburzony_splot_k_10  zaburzony_splot_k_12  zaburzony_splot_k_8
lab12/: main.cpp
lab12/wyniki/: wyniki1.txt  wyniki2.txt  wyniki3.txt
